--- a/output/archive.html
+++ b/output/archive.html
@@ -59,6 +59,10 @@
 <article class="listpage"><header><h1>文章存档</h1>
     </header><ul class="postlist">
 <li>
+<a href="2018/">2018</a>
+            (1)
+        </li>
+<li>
 <a href="2013/">2013</a>
             (2)
         </li>
